main/bin/main.69589.temp/ioc.log
Using build options: -cl-std=CL1.2 -g -s "/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl" -Xclang -O3 -Xclang -Wuninitialized -Xclang -DINTELFPGA_CL=201 -Xclang -ivfsoverlay-lib/home/leifu/intelFPGA_pro/20.1/hld/linux64/lib/libaoc_clang_decrypt.so -I "/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device"
Setting target instruction set architecture to: Default (Intel(R) Advanced Vector Extensions 2 (Intel(R) AVX2))
Platform name: Intel(R) FPGA Emulation Platform for OpenCL(TM)
Device name: Intel(R) FPGA Emulation Device
Device version: OpenCL 1.2 
Device vendor: Intel(R) Corporation
Device profile: EMBEDDED_PROFILE
Compilation started
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:19:26: error: use of undeclared identifier 'ts'
        double result = (HOST_TREATED(ci) ? P->TreatInfDrop : 1.0)
                         ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/host/src/macros.h:4:54: note: expanded from macro 'HOST_TREATED'
#define HOST_TREATED(x) ((Hosts[x].treat_stop_time > ts) && (Hosts[x].treat_start_time <= ts))
                                                     ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:19:26: error: use of undeclared identifier 'ts'
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/host/src/macros.h:4:91: note: expanded from macro 'HOST_TREATED'
#define HOST_TREATED(x) ((Hosts[x].treat_stop_time > ts) && (Hosts[x].treat_start_time <= ts))
                                                                                          ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:20:6: error: use of undeclared identifier 'ts'
                *       (HOST_VACCED(ci) ? P->VaccInfDrop : 1.0)
                         ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/host/src/macros.h:5:75: note: expanded from macro 'HOST_VACCED'
#define HOST_VACCED(x) (Hosts[x].vacc_start_time+P->usVaccTimeToEfficacy<=ts)
                                                                          ^
Compilation failed
Failed to build program...: -15 (CL_COMPILE_PROGRAM_FAILURE)
Compilation failed!
